# Recitethevocabulary

./: CMakeLists.txt  dictation.c  dictation.h  main.c  readText.c  readText.h  recite.c  recite.h  review.c  review.h  setIcon.c  setIcon.h  setMysql.c  setMysql.h  style.css  vocabulary.txt
